Added initial game Logic
Added initial game Logic

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <main>
       <div class="pre-question">
         <h2>Mastermind</h2>
-        <h6>Hoe groot moet de genegereerde code zijn?</h6>
+        <h6>Hoe grote code wilt u ontcijferen?</h6>
         <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label codewith">
-          <input class="mdl-textfield__input" type="text" pattern="-?[0-9]*(\.[0-9]+)?" id="codewidth">
+          <input class="mdl-textfield__input" type="text" pattern="-?[0-9]*(\.[0-9]+)?" id="codewidth" value="4">
           <label class="mdl-textfield__label" for="codewidth">Wat wilt u als codegrote?</label>
           <span class="mdl-textfield__error">Invoer is geen nummer!</span>
         </div>
@@ -29,12 +29,12 @@
         <div class="board">
         </div>
         <div class="controls">
-          <span id="red" class="colors"></span>
-          <span id="green" class="colors"></span>
-          <span id="darkblue" class="colors"></span>
-          <span id="purple" class="colors"></span>
-          <span id="lightblue" class="colors"></span>
-          <span id="yellow" class="colors"></span>
+          <div id="red" class="colors"></div>
+          <div id="green" class="colors"></div>
+          <div id="darkblue" class="colors"></div>
+          <div id="purple" class="colors"></div>
+          <div id="lightblue" class="colors"></div>
+          <div id="yellow" class="colors"></div>
         </div>
       </div>
     </main>
